...
                    MaterialPageRoute(
                      builder: (_) => const Conversation(),
                    ),
                  ).whenComplete(() => setState(() {}));
                },
                child: Text(
                  "Klicke hier für Unterstützung",
                  style: GoogleFonts.assistant(
                    color: CustomColors.blackBackground,
                    fontWeight: FontWeight.w600,
                  ),
                ),
                style: ButtonStyle(
...
    // An error occurred if conversation and dates are not of the same length
    if (previousConversations.length != previousDates.length) {
      StorageHandler.resetKey(SettingKeys.previousConversations);
      StorageHandler.resetKey(SettingKeys.previousConversationDates);
      listContents.add(
        const Text(
          "Die letzten Konversationen konnten nicht geladen werden.",
          style: TextStyle(
            color: Colors.black38,
          ),
        ),
      );
    } else {
...
        return "Vor 1 Minute";
      }

      return "Vor ${difference.inMinutes} Minuten";
    }

    return "Gerade eben";
  }
}

